--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>This is a level 1 header</h1>
+    <p>This is a paragraph that means nothing</p>
+  </body>
 </html>
